--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frequently Asked Questions</title>
     <link rel="shortcut icon" href="resources/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
@@ -14,9 +15,9 @@
             <p class="subtitle">Browse through the most frequently asked questions</p>
         </div>
 
-        <div class="content-a">
+        <div class="content">
             <h2>How can I track my order?</h2>
-            <p>You can track your order using the following steps</p>
+            <p class="subtitle">You can track your order using the following steps</p>
             <ol>
                 <li>Go to the Order <a href="#">Tracking page</a>.</li>
                 <li>Enter your order number and email address.</li>
@@ -25,7 +26,7 @@
             <p>If you encounter any issues, please visit our <a href="#">Help Center</a>.</p>
         </div>
         <hr>
-        <div class="content-b">
+        <div class="content">
             <h2>What is your return policy?</h2>
             <p>We offer a 30-day return policy on most items. Here are some key points</p>
             <ul>
