--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li>Enter your order number and email address.</li>
                 <li>Click on the Track Order button to view the current status of your shipment.</li>
             </ol>
-            <p>If you encounter any issues, please visit our <a href="#">Help Center</a>.</p>
+            <p class="content-p">If you encounter any issues, please visit our <a href="#">Help Center</a>.</p>
         </div>
         <hr>
         <div class="content">
@@ -34,7 +34,7 @@
                 <li><strong>Include original packaging and tags: </strong>All items should be returned with their original packaging and tags.</li>
                 <li><strong>Proof of purchase: </strong>A receipt or proof of purchase is required.</li>
             </ul>
-            <p>For more detailed information, read our full <a href="#">Return Policy</a>.</p>
+            <p class="content-p">For more detailed information, read our full <a href="#">Return Policy</a>.</p>
         </div>
     </main>
 </body>
